Fix mobile design issues
- Align 'Book Visit' button to right
- Fix spacing b/w photo and doctor name
- Add extra space below last doctor card
- Fix font size and weight of Date information selectors
- Align time selectors with 'select time text'
- Remove console.log from whole app

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -142,7 +142,7 @@ $carousel-control-next-icon-bg: url("data:image/svg+xml,<svg viewBox='0 0 8 14' 
       content: " ";
       display: block;
       position: relative;
-      bottom: -5px;
+      bottom: -10px;
       left: 0;
       height: 8px;
       background-color: #443eff;
@@ -175,7 +175,7 @@ $carousel-control-next-icon-bg: url("data:image/svg+xml,<svg viewBox='0 0 8 14' 
   width: 328px;
   height: 75vh;
   position: absolute;
-  top: 0;
+  top: 56px;
   left: 0;
   right: 0;
 }
@@ -203,9 +203,8 @@ $carousel-control-next-icon-bg: url("data:image/svg+xml,<svg viewBox='0 0 8 14' 
   display: flex;
   flex-direction: column;
   justify-content: center;
-  //width: 568px;
-  height: 100vh;
   position: absolute;
+  top: 56px;
   bottom: 0;
   left: 0;
   right: 0;
